--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@
   height: 40px;
   width: 40px;
   border-radius: 30px;
+  display: flex;
+  justify-content: center;
 }
 .happy__smile {
   background-color: yellow;
